# rotograph-camera

./: .gitignore  README.md  build.sh  camera.py  clean.sh  output.txt  pyproject.toml  requirements.txt  rotograph.py
.github/workflows/: debian-build.yml  ubuntu-build.yml
installer/: install.sh  rotograph.desktop
source/: application.py  audio_manager.py  camera.py  fixed_resolution.py  interface.py  scissor.py  video_manager.py
