[tool.poetry]
name = "rotograph-camera"
version = "1.0.1"
description = "Rotographic camera written in Python"
authors = ["Lenny Critchley <LennyPhoenixC@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^1.5.21"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
PyAudio = "^0.2.11"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
poetry = "^1.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
