[tool.poetry]
name = "rotograph-camera"
version = "1.0.2"
description = "Rotographic camera written in Python"
authors = ["Lucas Lis <lucasliscontact@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Pillow = "^9.0.1"
pyglet = "^1.5.21"
pygame = "^2.1.2"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
